fixed header misalignment bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,7 +581,6 @@ a:hover {
   position: relative;
   display: flex;
   justify-content: center;
-  padding-top: 20px;
 }
 
 .dropdown-content {
